<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dashboard_color"
    tools:context=".DashboardActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_150sdp"
                android:layout_marginStart="10dp"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/card_draw"
                android:id="@+id/cardConfirmedCases">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"
                    android:text="@string/tvConfirmedCases"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/tvConfirmCases"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150sdp"
            android:layout_marginEnd="10dp"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/card_draw"
            android:layout_marginStart="10dp"
            android:id="@+id/cardTotalDeath">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"
                    android:text="@string/tvTotalDeath"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:id="@+id/tvTotalDeath"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/card_draw"
            android:id="@+id/cardTotalRecovered">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"
                    android:text="@string/tvTotalRecovered"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/tvTotalRecovered"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/card_draw"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/cardTotalUpdated">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"
                    android:text="@string/tvTotalUpdated"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/tvUpdated"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/sourcecodepro_extralight"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnIndianData"
        android:text="@string/indianProvince"
        android:textAllCaps="false"
        android:fontFamily="@font/sourcecodepro_it"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnUSAData"
        android:text="@string/usaProvince"
        android:textAllCaps="false"
        android:fontFamily="@font/sourcecodepro_it"
        android:textSize="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCountryData"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="Country Data"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sourcecodepro_it"
        android:textSize="@dimen/_20sdp"/>


</LinearLayout>